test/errors/parsing/implicitModuleSilenced.chpl
proc main() {
  use M;

  foo();
}

module M {
  proc foo() {
    writeln("In M.foo()");
  }
}
